Pop over user  contetnt color, size changed,  overflow hiddeb fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.css
@@ -3,7 +3,6 @@
     background-color: white;
     border: 1px solid black;
     border-radius: 5px;
-    overflow: hidden;
     max-width: 60%;
     margin: 20px auto;
     flex-grow: 1;
